--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
-  <display-name>YelloServlet</display-name>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+  <display-name>project1</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.html</welcome-file>    
     <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>default.html</welcome-file>
@@ -10,15 +10,23 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
-    <servlet>
-		<description> </description>
-		<display-name>YelloServlet</display-name>
-		<servlet-name>YelloServlet </servlet-name>
-		<servlet-class>com.revature.controllers.YelloServlet</servlet-class>
+  <filter>
+  	<filter-name>Cors</filter-name>
+  	<filter-class>com.revature.web.filters.CorsFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>Cors</filter-name>
+  	<url-pattern>/*</url-pattern>
+  	<!-- All requests should go through our CORS filter -->
+  </filter-mapping>
+  
+  <servlet>
+		<display-name>MasterServlet</display-name>
+		<servlet-name>MasterServlet</servlet-name>
+		<servlet-class>com.revature.web.MasterServlet</servlet-class>
 	</servlet>
-	
 	<servlet-mapping>
-		<servlet-name>YelloServlet </servlet-name>
-		<url-pattern>/hello</url-pattern>
+		<servlet-name>MasterServlet</servlet-name>
+		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 </web-app>
